--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -260,12 +260,15 @@ jobs:
           name: ${{ runner.os }}-biocversion-RELEASE_3_12-r-4.0-results
           path: check
 
-      - uses: docker/build-push-action@v1
-        if: "!contains(github.event.head_commit.message, '/nodocker') && env.run_docker == 'true' && runner.os == 'Linux' "
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: waldronlab/curatedmetagenomicanalyses
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: latest
+
+      - name: Build and push to DockerHub
+        uses: docker/build-push-action@v2
+        if: "!contains(github.event.head_commit.message, '/nodocker') && env.run_docker == 'true' && runner.os == 'Linux' "
+        with:
+          push: true
+          tags: user/app:latest
