--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -258,16 +258,12 @@ jobs:
           name: ${{ runner.os }}-biocversion-RELEASE_3_12-r-4.0-results
           path: check
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: docker/build-push-action@v1
         if: "!contains(github.event.head_commit.message, '/nodocker') && env.run_docker == 'true' && runner.os == 'Linux' "
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push to DockerHub
-        uses: docker/build-push-action@v2
-        if: "!contains(github.event.head_commit.message, '/nodocker') && env.run_docker == 'true' && runner.os == 'Linux' "
-        with:
-          push: true
-          tags: user/app:latest
+          repository: waldronlab/curatedmetagenomicanalyses
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: latest
