--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -177,6 +177,11 @@ jobs:
         continue-on-error: true
         shell: Rscript {0}
 
+      - name: Install microbiome
+        run: |
+          BiocManager::install("microbiome")
+        shell: Rscript {0}
+
       - name: Install dependencies pass 2
         run: |
           ## Pass #2 at installing dependencies
