--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -5,7 +5,7 @@ on:
   push:
   pull_request:
 
-name: R-CMD-check-bioc
+name: R-CMD-check-bioc & Docker-build
 
 env:
   has_testthat: 'false'
@@ -13,12 +13,7 @@ env:
   run_pkgdown: 'true'
   has_RUnit: 'false'
   cache-version: 'cache-v1'
-  run_docker: 'true'
   run_cmdcheck: 'true'
-  # Use ghcr.io for the GitHub Container Registry
-  REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-check:
@@ -26,9 +21,7 @@ jobs:
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
     container: ${{ matrix.config.cont }}
     permissions:
-      contents: write
-      packages: write
-      id-token: write
+      contents: write # Needed for pkgdown deployment
 
     strategy:
       fail-fast: false
@@ -51,9 +44,6 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Setup R from r-lib
         if: runner.os != 'Linux'
@@ -154,8 +144,30 @@ jobs:
           name: ${{ runner.os }}-biocversion-RELEASE_3_21-r-4.5-results
           path: check
 
+  build-push-docker:
+    name: Build and Push Docker image
+    runs-on: ubuntu-latest
+    needs: build-check
+    # Only run this job on pushes to the main branch
+    if: github.ref == 'refs/heads/main'
+    permissions:
+      packages: write # Needed to push to GHCR
+      id-token: write # Needed for cosign to sign the image
+
+    env:
+      # Use ghcr.io for the GitHub Container Registry
+      REGISTRY: ghcr.io
+      # github.repository as <account>/<repo>
+      IMAGE_NAME: ${{ github.repository }}
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to the Container registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -173,16 +185,14 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Install Cosign
-        if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v3
 
       - name: Sign the published Docker image
-        if: github.event_name != 'pull_request'
         run: cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
         env:
             COSIGN_EXPERIMENTAL: 1
